--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.log.category."service.SiswaService".level=INFO
 
 quarkus.http.port=8081
+
+# CORS config
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:5173
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
