--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ quarkus.http.port=8081
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.exposed-headers=content-type
+quarkus.http.cors.credentials=true
